// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Pipeline — kanban (Board) view — guards ReadinessChips + GateIndicator > DOM snapshot — Board view (golden master) 1`] = `
<div>
  <div
    style="padding: 16px; height: 100%; display: flex; flex-direction: column;"
  >
    <div
      style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 8px; flex-wrap: wrap; gap: 8px;"
    >
      <div
        style="display: flex; align-items: center; gap: 12px;"
      >
        <div
          style="font-size: 22px; font-weight: 800; color: rgb(17, 17, 17); letter-spacing: -0.5px;"
        >
          Pipeline
        </div>
        <div
          style="display: flex; gap: 3px;"
        >
          <button
            style="padding: 3px 10px; font-size: 12px; font-weight: 600; font-family: "Outfit", "DM Sans", -apple-system, BlinkMacSystemFont, sans-serif; border-radius: 6px; border: 1px solid rgb(74, 124, 89); background: rgb(237, 245, 240); color: rgb(74, 124, 89); cursor: pointer; transition: all 0.15s; display: flex; align-items: center; gap: 5px;"
          >
            All
            <span
              style="font-size: 10px; font-weight: 700; padding: 0px 5px; border-radius: 10px; background: rgb(74, 124, 89); color: rgb(255, 255, 255);"
            >
              4
            </span>
          </button>
          <button
            style="padding: 3px 10px; font-size: 12px; font-weight: 600; font-family: "Outfit", "DM Sans", -apple-system, BlinkMacSystemFont, sans-serif; border-radius: 6px; border: 1px solid rgb(226, 230, 226); background: rgb(255, 255, 255); color: rgb(107, 114, 128); cursor: pointer; transition: all 0.15s; display: flex; align-items: center; gap: 5px;"
          >
            🇿🇦
            <span
              style="font-size: 10px; font-weight: 700; padding: 0px 5px; border-radius: 10px; background: rgb(238, 241, 238); color: rgb(107, 114, 128);"
            >
              4
            </span>
          </button>
          <button
            style="padding: 3px 10px; font-size: 12px; font-weight: 600; font-family: "Outfit", "DM Sans", -apple-system, BlinkMacSystemFont, sans-serif; border-radius: 6px; border: 1px solid rgb(226, 230, 226); background: rgb(255, 255, 255); color: rgb(107, 114, 128); cursor: pointer; transition: all 0.15s; display: flex; align-items: center; gap: 5px;"
          >
            🌍
            <span
              style="font-size: 10px; font-weight: 700; padding: 0px 5px; border-radius: 10px; background: rgb(238, 241, 238); color: rgb(107, 114, 128);"
            >
              0
            </span>
          </button>
        </div>
      </div>
      <button
        style="padding: 6px 14px; border: medium; font-size: 12px; font-weight: 600; cursor: pointer; opacity: 1; font-family: "Outfit", "DM Sans", -apple-system, BlinkMacSystemFont, sans-serif; border-radius: 8px; transition: all 0.15s ease; letter-spacing: 0.1px; background: rgb(74, 124, 89); color: rgb(255, 255, 255); box-shadow: 0 1px 4px #4A7C5933;"
      >
        + Add
      </button>
    </div>
    <div
      style="display: flex; align-items: center; gap: 8px; margin-bottom: 10px; flex-wrap: wrap;"
    >
      <input
        placeholder="Search..."
        style="padding: 7px 12px; font-size: 13px; border: 1px solid rgb(226, 230, 226); border-radius: 8px; width: 160px; font-family: "Outfit", "DM Sans", -apple-system, BlinkMacSystemFont, sans-serif; outline: none; transition: border-color 0.15s;"
        value=""
      />
      <select
        style="padding: 7px 10px; font-size: 12px; border: 1px solid rgb(226, 230, 226); border-radius: 8px; font-family: "Outfit", "DM Sans", -apple-system, BlinkMacSystemFont, sans-serif; background: rgb(255, 255, 255); cursor: pointer;"
      >
        <option
          value="all"
        >
          🔽 Filters
        </option>
        <option
          value="Foundation"
        >
          Foundation
        </option>
        <option
          value="Corporate CSI"
        >
          Corporate CSI
        </option>
      </select>
      <select
        style="padding: 7px 10px; font-size: 12px; border: 1px solid rgb(226, 230, 226); border-radius: 8px; font-family: "Outfit", "DM Sans", -apple-system, BlinkMacSystemFont, sans-serif; background: rgb(255, 255, 255); cursor: pointer;"
      >
        <option
          value="list"
        >
          View: List
        </option>
        <option
          value="kanban"
        >
          View: Board
        </option>
        <option
          value="person"
        >
          View: Person
        </option>
      </select>
      <div
        style="flex: 1 1 0%;"
      />
      <span
        style="font-size: 12px; color: rgb(107, 114, 128);"
      >
        Sort by:
      </span>
      <select
        style="padding: 7px 10px; font-size: 12px; border: 1px solid rgb(226, 230, 226); border-radius: 8px; font-family: "Outfit", "DM Sans", -apple-system, BlinkMacSystemFont, sans-serif; background: rgb(255, 255, 255); font-weight: 600; cursor: pointer;"
      >
        <option
          value="default"
        >
          Deadline
        </option>
        <option
          value="ask"
        >
          Amount
        </option>
        <option
          value="priority"
        >
          Priority
        </option>
        <option
          value="fit"
        >
          Fit score
        </option>
      </select>
      <div
        data-tour="scout-button"
        style="display: flex; align-items: center; gap: 0px; border-radius: 8px; overflow: hidden; border: 1px solid rgba(74, 124, 89, 0.25);"
      >
        <button
          style="padding: 7px 14px; font-size: 12px; font-weight: 700; font-family: "Outfit", "DM Sans", -apple-system, BlinkMacSystemFont, sans-serif; background: rgb(74, 124, 89); color: rgb(255, 255, 255); border: medium; cursor: pointer;"
        >
          ☀ Scout
        </button>
        <select
          style="padding: 7px 6px; font-size: 11px; font-weight: 600; font-family: "Outfit", "DM Sans", -apple-system, BlinkMacSystemFont, sans-serif; border-width: medium medium medium 1px; border-style: none none none solid; border-color: currentcolor currentcolor currentcolor rgba(74, 124, 89, 0.19); border-image: none; background: rgb(237, 245, 240); color: rgb(74, 124, 89); cursor: pointer; outline: none;"
        >
          <option
            value="both"
          >
            🌐 All
          </option>
          <option
            value="sa"
          >
            🇿🇦 SA
          </option>
          <option
            value="global"
          >
            🌍 Global
          </option>
        </select>
      </div>
      <button
        style="padding: 6px 12px; border: 1px rgba(37, 99, 235, 0.19); font-size: 12px; font-weight: 600; cursor: pointer; opacity: 1; font-family: "Outfit", "DM Sans", -apple-system, BlinkMacSystemFont, sans-serif; border-radius: 8px; transition: all 0.15s ease; letter-spacing: 0.1px; background: transparent; color: rgb(37, 99, 235);"
      >
        🔗 URL
      </button>
      <button
        style="padding: 6px 12px; border: 1px rgba(193, 120, 23, 0.19); font-size: 12px; font-weight: 600; cursor: pointer; opacity: 1; font-family: "Outfit", "DM Sans", -apple-system, BlinkMacSystemFont, sans-serif; border-radius: 8px; transition: all 0.15s ease; letter-spacing: 0.1px; background: transparent; color: rgb(193, 120, 23); animation: none;"
      >
        ⚡ Score All
      </button>
      <button
        style="padding: 6px 12px; border: 1px solid rgb(226, 230, 226); font-size: 12px; font-weight: 600; cursor: pointer; opacity: 1; font-family: "Outfit", "DM Sans", -apple-system, BlinkMacSystemFont, sans-serif; border-radius: 8px; transition: all 0.15s ease; letter-spacing: 0.1px; background: transparent; color: rgb(107, 114, 128);"
      >
        CSV
      </button>
      <button
        style="padding: 6px 12px; border-width: 1px; border-style: solid; border-image: none; font-size: 12px; font-weight: 600; cursor: pointer; opacity: 1; font-family: "Outfit", "DM Sans", -apple-system, BlinkMacSystemFont, sans-serif; border-radius: 8px; transition: all 0.15s ease; letter-spacing: 0.1px; background: transparent; color: rgb(107, 114, 128);"
      >
        Select
      </button>
    </div>
    <div
      data-tour="pipeline-filters"
      style="display: flex; align-items: center; gap: 6px; margin-bottom: 10px; padding: 8px 14px; background: rgb(255, 255, 255); border-radius: 10px; border: 1px solid rgb(226, 230, 226); flex-wrap: wrap;"
    >
      <button
        style="padding: 5px 12px; border-radius: 100px; font-size: 11px; font-weight: 600; cursor: pointer; font-family: "Outfit", "DM Sans", -apple-system, BlinkMacSystemFont, sans-serif; transition: all 0.15s ease; border: medium; background: rgb(220, 252, 231); color: rgb(22, 163, 74);"
      >
        ● Open 
        3
      </button>
      <button
        style="padding: 5px 12px; border-radius: 100px; font-size: 11px; font-weight: 600; cursor: pointer; font-family: "Outfit", "DM Sans", -apple-system, BlinkMacSystemFont, sans-serif; transition: all 0.15s ease; border: medium; background: rgb(254, 245, 231); color: rgb(193, 120, 23);"
      >
        ● Due soon 
        0
      </button>
      <div
        style="width: 1px; height: 20px; background: rgb(226, 230, 226); margin: 0px 4px; flex-shrink: 0;"
      />
      <button
        style="padding: 4px 10px; border-radius: 100px; font-size: 11px; font-weight: 600; cursor: pointer; font-family: "Outfit", "DM Sans", -apple-system, BlinkMacSystemFont, sans-serif; transition: all 0.15s ease; border: 1px solid rgb(226, 230, 226); background: rgb(255, 255, 255); color: rgb(107, 114, 128);"
      >
        New this week
      </button>
      <button
        style="padding: 4px 10px; border-radius: 100px; font-size: 11px; font-weight: 600; cursor: pointer; font-family: "Outfit", "DM Sans", -apple-system, BlinkMacSystemFont, sans-serif; transition: all 0.15s ease; border: 1px solid rgb(226, 230, 226); background: rgb(255, 255, 255); color: rgb(107, 114, 128);"
      >
        Due this month
      </button>
      <button
        style="padding: 4px 10px; border-radius: 100px; font-size: 11px; font-weight: 600; cursor: pointer; font-family: "Outfit", "DM Sans", -apple-system, BlinkMacSystemFont, sans-serif; transition: all 0.15s ease; border: 1px solid rgb(226, 230, 226); background: rgb(255, 255, 255); color: rgb(107, 114, 128);"
      >
        No deadline
      </button>
      <button
        style="padding: 4px 10px; border-radius: 100px; font-size: 11px; font-weight: 600; cursor: pointer; font-family: "Outfit", "DM Sans", -apple-system, BlinkMacSystemFont, sans-serif; transition: all 0.15s ease; border: 1px solid rgb(226, 230, 226); background: rgb(255, 255, 255); color: rgb(107, 114, 128);"
      >
        No draft
      </button>
      <button
        style="padding: 4px 10px; border-radius: 100px; font-size: 11px; font-weight: 600; cursor: pointer; font-family: "Outfit", "DM Sans", -apple-system, BlinkMacSystemFont, sans-serif; transition: all 0.15s ease; border: 1px solid rgb(226, 230, 226); background: rgb(255, 255, 255); color: rgb(107, 114, 128);"
      >
        Unassigned
      </button>
      <div
        style="flex: 1 1 0%;"
      />
      <div
        style="display: flex; gap: 4px; align-items: center; flex-shrink: 0;"
      >
        <button
          style="width: 28px; height: 28px; border-radius: 50%; padding: 0px; border: 2px solid transparent; background: rgb(109, 40, 217); color: rgb(255, 255, 255); cursor: pointer; display: flex; align-items: center; justify-content: center; font-size: 10px; font-weight: 700; font-family: "Outfit", "DM Sans", -apple-system, BlinkMacSystemFont, sans-serif; transition: all 0.15s; opacity: 0.5; box-shadow: none;"
          title="Alison Jacobson"
        >
          AJ
        </button>
        <button
          style="width: 28px; height: 28px; border-radius: 50%; padding: 0px; border: 2px solid transparent; background: rgb(193, 120, 23); color: rgb(255, 255, 255); cursor: pointer; display: flex; align-items: center; justify-content: center; font-size: 10px; font-weight: 700; font-family: "Outfit", "DM Sans", -apple-system, BlinkMacSystemFont, sans-serif; transition: all 0.15s; opacity: 0.5; box-shadow: none;"
          title="David Kramer"
        >
          DK
        </button>
      </div>
    </div>
    <div
      data-testid="scout-stub"
    />
    <div
      style="display: flex; gap: 10px; flex: 1 1 0%; overflow-x: auto; padding-bottom: 10px;"
    >
      <div
        style="min-width: 220px; max-width: 280px; flex: 1 1 0%; display: flex; flex-direction: column; background: rgba(239, 246, 255, 0.25); border-radius: 10px; padding: 8px; border: 1px solid rgba(59, 130, 246, 0.19);"
      >
        <div
          style="display: flex; align-items: center; justify-content: space-between; padding: 6px 8px; margin-bottom: 6px;"
        >
          <div
            style="display: flex; align-items: center; gap: 6px;"
          >
            <span
              style="width: 8px; height: 8px; border-radius: 50%; background: rgb(59, 130, 246);"
            />
            <span
              style="font-size: 12px; font-weight: 700; color: rgb(75, 85, 99); text-transform: uppercase; letter-spacing: 0.5px;"
            >
              Scouted
            </span>
            <span
              style="font-size: 11px; color: rgb(107, 114, 128); font-weight: 600;"
            >
              (
              1
              )
            </span>
          </div>
          <span
            style="font-size: 10px; color: rgb(107, 114, 128); font-family: "JetBrains Mono", "SF Mono", "Fira Code", monospace;"
          >
            R5.0M
          </span>
        </div>
        <div
          style="flex: 1 1 0%; overflow-y: auto; display: flex; flex-direction: column; gap: 6px;"
        >
          <div
            draggable="true"
            style="background: rgb(255, 255, 255); border-radius: 8px; padding: 8px 10px; border: 1px solid rgba(59, 130, 246, 0.19); cursor: pointer; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.04); transition: box-shadow 0.15s, transform 0.15s;"
          >
            <div
              style="display: flex; align-items: flex-start; gap: 8px;"
            >
              <div
                style="flex: 1 1 0%; min-width: 0px;"
              >
                <div
                  style="font-size: 13px; font-weight: 600; color: rgb(17, 17, 17); margin-bottom: 4px; line-height: 1.3; display: flex; align-items: center; gap: 6px;"
                >
                  Youth Skills 2026
                </div>
                <div
                  style="font-size: 11px; color: rgb(107, 114, 128); margin-bottom: 6px; display: flex; align-items: center; gap: 6px;"
                >
                  GIDF
                </div>
              </div>
            </div>
            <div
              style="display: flex; align-items: center; justify-content: space-between; gap: 6px;"
            >
              <div
                style="display: flex; align-items: center; gap: 6px;"
              >
                <span
                  style="display: inline-flex; align-items: center; justify-content: center; width: 20px; height: 20px; font-size: 7.199999999999999px; font-weight: 700; color: rgb(109, 40, 217); background: rgb(243, 240, 255); border-radius: 6px; flex-shrink: 0; font-family: "JetBrains Mono", "SF Mono", "Fira Code", monospace;"
                  title="Alison Jacobson"
                >
                  AJ
                </span>
                <span
                  style="font-size: 12px; font-weight: 600; color: rgb(75, 85, 99); font-family: "JetBrains Mono", "SF Mono", "Fira Code", monospace;"
                >
                  R5.0M
                </span>
              </div>
              <span
                style="display: inline-flex; align-items: center; gap: 4px; padding: 2px 7px; font-size: 9px; font-weight: 600; color: rgb(22, 163, 74); background: rgb(232, 236, 232); border-radius: 20px; animation: none; white-space: nowrap; letter-spacing: 0.1px;"
              >
                104d
              </span>
            </div>
            <div
              style="display: flex; flex-wrap: wrap; gap: 4px; margin-top: 6px;"
            >
              <span
                style="font-size: 9px; font-weight: 600; padding: 2px 6px; border-radius: 6px; background: rgb(254, 245, 231); color: rgb(193, 120, 23); letter-spacing: 0.2px;"
              >
                9 docs missing
              </span>
              <span
                style="font-size: 9px; font-weight: 600; padding: 2px 6px; border-radius: 6px; background: rgb(229, 231, 235); color: rgb(75, 85, 99); letter-spacing: 0.2px;"
              >
                No fit score
              </span>
              <span
                style="font-size: 9px; font-weight: 600; padding: 2px 6px; border-radius: 6px; background: rgb(229, 231, 235); color: rgb(75, 85, 99); letter-spacing: 0.2px;"
              >
                No research
              </span>
              <span
                style="font-size: 9px; color: rgb(107, 114, 128); font-weight: 500;"
              >
                +
                1
              </span>
            </div>
            <div
              style="display: flex; align-items: center; gap: 4px; margin-top: 6px; padding: 3px 8px; border-radius: 6px; font-size: 9px; font-weight: 600; background: rgb(254, 245, 231); color: rgb(193, 120, 23);"
            >
              <span
                style="font-size: 10px;"
              >
                ○
              </span>
              <span>
                Communications needed
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        style="min-width: 220px; max-width: 280px; flex: 1 1 0%; display: flex; flex-direction: column; background: rgba(238, 242, 255, 0.25); border-radius: 10px; padding: 8px; border: 1px solid rgba(99, 102, 241, 0.19);"
      >
        <div
          style="display: flex; align-items: center; justify-content: space-between; padding: 6px 8px; margin-bottom: 6px;"
        >
          <div
            style="display: flex; align-items: center; gap: 6px;"
          >
            <span
              style="width: 8px; height: 8px; border-radius: 50%; background: rgb(99, 102, 241);"
            />
            <span
              style="font-size: 12px; font-weight: 700; color: rgb(75, 85, 99); text-transform: uppercase; letter-spacing: 0.5px;"
            >
              Vetting
            </span>
            <span
              style="font-size: 11px; color: rgb(107, 114, 128); font-weight: 600;"
            >
              (
              0
              )
            </span>
          </div>
          <span
            style="font-size: 10px; color: rgb(107, 114, 128); font-family: "JetBrains Mono", "SF Mono", "Fira Code", monospace;"
          >
            —
          </span>
        </div>
        <div
          style="flex: 1 1 0%; overflow-y: auto; display: flex; flex-direction: column; gap: 6px;"
        />
      </div>
      <div
        style="min-width: 220px; max-width: 280px; flex: 1 1 0%; display: flex; flex-direction: column; background: rgba(239, 246, 255, 0.25); border-radius: 10px; padding: 8px; border: 1px solid rgba(59, 130, 246, 0.19);"
      >
        <div
          style="display: flex; align-items: center; justify-content: space-between; padding: 6px 8px; margin-bottom: 6px;"
        >
          <div
            style="display: flex; align-items: center; gap: 6px;"
          >
            <span
              style="width: 8px; height: 8px; border-radius: 50%; background: rgb(59, 130, 246);"
            />
            <span
              style="font-size: 12px; font-weight: 700; color: rgb(75, 85, 99); text-transform: uppercase; letter-spacing: 0.5px;"
            >
              Qualifying
            </span>
            <span
              style="font-size: 11px; color: rgb(107, 114, 128); font-weight: 600;"
            >
              (
              0
              )
            </span>
          </div>
          <span
            style="font-size: 10px; color: rgb(107, 114, 128); font-family: "JetBrains Mono", "SF Mono", "Fira Code", monospace;"
          >
            —
          </span>
        </div>
        <div
          style="flex: 1 1 0%; overflow-y: auto; display: flex; flex-direction: column; gap: 6px;"
        />
      </div>
      <div
        style="min-width: 220px; max-width: 280px; flex: 1 1 0%; display: flex; flex-direction: column; background: rgba(255, 251, 235, 0.25); border-radius: 10px; padding: 8px; border: 1px solid rgba(245, 158, 11, 0.19);"
      >
        <div
          style="display: flex; align-items: center; justify-content: space-between; padding: 6px 8px; margin-bottom: 6px;"
        >
          <div
            style="display: flex; align-items: center; gap: 6px;"
          >
            <span
              style="width: 8px; height: 8px; border-radius: 50%; background: rgb(245, 158, 11);"
            />
            <span
              style="font-size: 12px; font-weight: 700; color: rgb(75, 85, 99); text-transform: uppercase; letter-spacing: 0.5px;"
            >
              Drafting
            </span>
            <span
              style="font-size: 11px; color: rgb(107, 114, 128); font-weight: 600;"
            >
              (
              2
              )
            </span>
          </div>
          <span
            style="font-size: 10px; color: rgb(107, 114, 128); font-family: "JetBrains Mono", "SF Mono", "Fira Code", monospace;"
          >
            R1.2M
          </span>
        </div>
        <div
          style="flex: 1 1 0%; overflow-y: auto; display: flex; flex-direction: column; gap: 6px;"
        >
          <div
            draggable="true"
            style="background: rgb(255, 255, 255); border-radius: 8px; padding: 8px 10px; border: 1px solid rgba(245, 158, 11, 0.19); cursor: pointer; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.04); transition: box-shadow 0.15s, transform 0.15s;"
          >
            <div
              style="display: flex; align-items: flex-start; gap: 8px;"
            >
              <div
                style="flex: 1 1 0%; min-width: 0px;"
              >
                <div
                  style="font-size: 13px; font-weight: 600; color: rgb(17, 17, 17); margin-bottom: 4px; line-height: 1.3; display: flex; align-items: center; gap: 6px;"
                >
                  Corporate Accelerator
                </div>
                <div
                  style="font-size: 11px; color: rgb(107, 114, 128); margin-bottom: 6px; display: flex; align-items: center; gap: 6px;"
                >
                  CCBA
                </div>
              </div>
            </div>
            <div
              style="display: flex; align-items: center; justify-content: space-between; gap: 6px;"
            >
              <div
                style="display: flex; align-items: center; gap: 6px;"
              >
                <span
                  style="display: inline-flex; align-items: center; justify-content: center; width: 20px; height: 20px; font-size: 7.199999999999999px; font-weight: 700; color: rgb(109, 40, 217); background: rgb(243, 240, 255); border-radius: 6px; flex-shrink: 0; font-family: "JetBrains Mono", "SF Mono", "Fira Code", monospace;"
                  title="Alison Jacobson"
                >
                  AJ
                </span>
                <span
                  style="font-size: 12px; font-weight: 600; color: rgb(75, 85, 99); font-family: "JetBrains Mono", "SF Mono", "Fira Code", monospace;"
                >
                  R651K
                </span>
              </div>
              <span
                style="display: inline-flex; align-items: center; gap: 4px; padding: 2px 7px; font-size: 9px; font-weight: 600; color: rgb(22, 163, 74); background: rgb(232, 236, 232); border-radius: 20px; animation: none; white-space: nowrap; letter-spacing: 0.1px;"
              >
                58d
              </span>
            </div>
            <div
              style="display: flex; flex-wrap: wrap; gap: 4px; margin-top: 6px;"
            >
              <span
                style="font-size: 9px; font-weight: 600; padding: 2px 6px; border-radius: 6px; background: rgb(254, 245, 231); color: rgb(193, 120, 23); letter-spacing: 0.2px;"
              >
                9 docs missing
              </span>
              <span
                style="font-size: 9px; font-weight: 600; padding: 2px 6px; border-radius: 6px; background: rgb(229, 231, 235); color: rgb(75, 85, 99); letter-spacing: 0.2px;"
              >
                No fit score
              </span>
              <span
                style="font-size: 9px; font-weight: 600; padding: 2px 6px; border-radius: 6px; background: rgb(229, 231, 235); color: rgb(75, 85, 99); letter-spacing: 0.2px;"
              >
                No research
              </span>
              <span
                style="font-size: 9px; color: rgb(107, 114, 128); font-weight: 500;"
              >
                +
                1
              </span>
            </div>
            <div
              style="display: flex; align-items: center; gap: 4px; margin-top: 6px; padding: 3px 8px; border-radius: 6px; font-size: 9px; font-weight: 600; background: rgb(254, 245, 231); color: rgb(193, 120, 23);"
            >
              <span
                style="font-size: 10px;"
              >
                ○
              </span>
              <span>
                Head of Programmes needed
              </span>
            </div>
          </div>
          <div
            draggable="true"
            style="background: rgb(255, 255, 255); border-radius: 8px; padding: 8px 10px; border: 1px solid rgba(245, 158, 11, 0.19); cursor: pointer; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.04); transition: box-shadow 0.15s, transform 0.15s;"
          >
            <div
              style="display: flex; align-items: flex-start; gap: 8px;"
            >
              <div
                style="flex: 1 1 0%; min-width: 0px;"
              >
                <div
                  style="font-size: 13px; font-weight: 600; color: rgb(17, 17, 17); margin-bottom: 4px; line-height: 1.3; display: flex; align-items: center; gap: 6px;"
                >
                  Board Initiative
                </div>
                <div
                  style="font-size: 11px; color: rgb(107, 114, 128); margin-bottom: 6px; display: flex; align-items: center; gap: 6px;"
                >
                  RMB
                </div>
              </div>
            </div>
            <div
              style="display: flex; align-items: center; justify-content: space-between; gap: 6px;"
            >
              <div
                style="display: flex; align-items: center; gap: 6px;"
              >
                <span
                  style="display: inline-flex; align-items: center; justify-content: center; width: 20px; height: 20px; font-size: 7.199999999999999px; font-weight: 700; color: rgb(193, 120, 23); background: rgb(254, 245, 231); border-radius: 6px; flex-shrink: 0; font-family: "JetBrains Mono", "SF Mono", "Fira Code", monospace;"
                  title="David Kramer"
                >
                  DK
                </span>
                <span
                  style="font-size: 12px; font-weight: 600; color: rgb(75, 85, 99); font-family: "JetBrains Mono", "SF Mono", "Fira Code", monospace;"
                >
                  R516K
                </span>
              </div>
              <span
                style="display: inline-flex; align-items: center; gap: 4px; padding: 2px 7px; font-size: 9px; font-weight: 600; color: rgb(22, 163, 74); background: rgb(232, 236, 232); border-radius: 20px; animation: none; white-space: nowrap; letter-spacing: 0.1px;"
              >
                105d
              </span>
            </div>
            <div
              style="display: flex; flex-wrap: wrap; gap: 4px; margin-top: 6px;"
            >
              <span
                style="font-size: 9px; font-weight: 600; padding: 2px 6px; border-radius: 6px; background: rgb(254, 245, 231); color: rgb(193, 120, 23); letter-spacing: 0.2px;"
              >
                9 docs missing
              </span>
              <span
                style="font-size: 9px; font-weight: 600; padding: 2px 6px; border-radius: 6px; background: rgb(229, 231, 235); color: rgb(75, 85, 99); letter-spacing: 0.2px;"
              >
                No fit score
              </span>
              <span
                style="font-size: 9px; font-weight: 600; padding: 2px 6px; border-radius: 6px; background: rgb(229, 231, 235); color: rgb(75, 85, 99); letter-spacing: 0.2px;"
              >
                No research
              </span>
              <span
                style="font-size: 9px; color: rgb(107, 114, 128); font-weight: 500;"
              >
                +
                1
              </span>
            </div>
            <div
              style="display: flex; align-items: center; gap: 4px; margin-top: 6px; padding: 3px 8px; border-radius: 6px; font-size: 9px; font-weight: 600; background: rgb(220, 252, 231); color: rgb(22, 163, 74);"
            >
              <span
                style="font-size: 10px;"
              >
                ✓
              </span>
              <span>
                Can advance
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        style="min-width: 220px; max-width: 280px; flex: 1 1 0%; display: flex; flex-direction: column; background: rgba(252, 231, 243, 0.25); border-radius: 10px; padding: 8px; border: 1px solid rgba(236, 72, 153, 0.19);"
      >
        <div
          style="display: flex; align-items: center; justify-content: space-between; padding: 6px 8px; margin-bottom: 6px;"
        >
          <div
            style="display: flex; align-items: center; gap: 6px;"
          >
            <span
              style="width: 8px; height: 8px; border-radius: 50%; background: rgb(236, 72, 153);"
            />
            <span
              style="font-size: 12px; font-weight: 700; color: rgb(75, 85, 99); text-transform: uppercase; letter-spacing: 0.5px;"
            >
              Review
            </span>
            <span
              style="font-size: 11px; color: rgb(107, 114, 128); font-weight: 600;"
            >
              (
              0
              )
            </span>
          </div>
          <span
            style="font-size: 10px; color: rgb(107, 114, 128); font-family: "JetBrains Mono", "SF Mono", "Fira Code", monospace;"
          >
            —
          </span>
        </div>
        <div
          style="flex: 1 1 0%; overflow-y: auto; display: flex; flex-direction: column; gap: 6px;"
        />
      </div>
      <div
        style="min-width: 220px; max-width: 280px; flex: 1 1 0%; display: flex; flex-direction: column; background: rgba(243, 232, 255, 0.25); border-radius: 10px; padding: 8px; border: 1px solid rgba(139, 92, 246, 0.19);"
      >
        <div
          style="display: flex; align-items: center; justify-content: space-between; padding: 6px 8px; margin-bottom: 6px;"
        >
          <div
            style="display: flex; align-items: center; gap: 6px;"
          >
            <span
              style="width: 8px; height: 8px; border-radius: 50%; background: rgb(139, 92, 246);"
            />
            <span
              style="font-size: 12px; font-weight: 700; color: rgb(75, 85, 99); text-transform: uppercase; letter-spacing: 0.5px;"
            >
              Submitted
            </span>
            <span
              style="font-size: 11px; color: rgb(107, 114, 128); font-weight: 600;"
            >
              (
              0
              )
            </span>
          </div>
          <span
            style="font-size: 10px; color: rgb(107, 114, 128); font-family: "JetBrains Mono", "SF Mono", "Fira Code", monospace;"
          >
            —
          </span>
        </div>
        <div
          style="flex: 1 1 0%; overflow-y: auto; display: flex; flex-direction: column; gap: 6px;"
        />
      </div>
      <div
        style="min-width: 220px; max-width: 280px; flex: 1 1 0%; display: flex; flex-direction: column; background: rgba(236, 254, 255, 0.25); border-radius: 10px; padding: 8px; border: 1px solid rgba(8, 145, 178, 0.19);"
      >
        <div
          style="display: flex; align-items: center; justify-content: space-between; padding: 6px 8px; margin-bottom: 6px;"
        >
          <div
            style="display: flex; align-items: center; gap: 6px;"
          >
            <span
              style="width: 8px; height: 8px; border-radius: 50%; background: rgb(8, 145, 178);"
            />
            <span
              style="font-size: 12px; font-weight: 700; color: rgb(75, 85, 99); text-transform: uppercase; letter-spacing: 0.5px;"
            >
              Awaiting
            </span>
            <span
              style="font-size: 11px; color: rgb(107, 114, 128); font-weight: 600;"
            >
              (
              0
              )
            </span>
          </div>
          <span
            style="font-size: 10px; color: rgb(107, 114, 128); font-family: "JetBrains Mono", "SF Mono", "Fira Code", monospace;"
          >
            —
          </span>
        </div>
        <div
          style="flex: 1 1 0%; overflow-y: auto; display: flex; flex-direction: column; gap: 6px;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Pipeline — no grants > DOM snapshot — no grants (golden master) 1`] = `
<div>
  <div
    style="padding: 16px; height: 100%; display: flex; flex-direction: column;"
  >
    <div
      style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 8px; flex-wrap: wrap; gap: 8px;"
    >
      <div
        style="display: flex; align-items: center; gap: 12px;"
      >
        <div
          style="font-size: 22px; font-weight: 800; color: rgb(17, 17, 17); letter-spacing: -0.5px;"
        >
          Pipeline
        </div>
        <div
          style="display: flex; gap: 3px;"
        >
          <button
            style="padding: 3px 10px; font-size: 12px; font-weight: 600; font-family: "Outfit", "DM Sans", -apple-system, BlinkMacSystemFont, sans-serif; border-radius: 6px; border: 1px solid rgb(74, 124, 89); background: rgb(237, 245, 240); color: rgb(74, 124, 89); cursor: pointer; transition: all 0.15s; display: flex; align-items: center; gap: 5px;"
          >
            All
            <span
              style="font-size: 10px; font-weight: 700; padding: 0px 5px; border-radius: 10px; background: rgb(74, 124, 89); color: rgb(255, 255, 255);"
            >
              0
            </span>
          </button>
          <button
            style="padding: 3px 10px; font-size: 12px; font-weight: 600; font-family: "Outfit", "DM Sans", -apple-system, BlinkMacSystemFont, sans-serif; border-radius: 6px; border: 1px solid rgb(226, 230, 226); background: rgb(255, 255, 255); color: rgb(107, 114, 128); cursor: pointer; transition: all 0.15s; display: flex; align-items: center; gap: 5px;"
          >
            🇿🇦
            <span
              style="font-size: 10px; font-weight: 700; padding: 0px 5px; border-radius: 10px; background: rgb(238, 241, 238); color: rgb(107, 114, 128);"
            >
              0
            </span>
          </button>
          <button
            style="padding: 3px 10px; font-size: 12px; font-weight: 600; font-family: "Outfit", "DM Sans", -apple-system, BlinkMacSystemFont, sans-serif; border-radius: 6px; border: 1px solid rgb(226, 230, 226); background: rgb(255, 255, 255); color: rgb(107, 114, 128); cursor: pointer; transition: all 0.15s; display: flex; align-items: center; gap: 5px;"
          >
            🌍
            <span
              style="font-size: 10px; font-weight: 700; padding: 0px 5px; border-radius: 10px; background: rgb(238, 241, 238); color: rgb(107, 114, 128);"
            >
              0
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      data-testid="scout-stub"
    />
  </div>
</div>
`;

exports[`Pipeline — populated, list view (default) > DOM snapshot — list view (golden master) 1`] = `
<div>
  <div
    style="padding: 16px; height: 100%; display: flex; flex-direction: column;"
  >
    <div
      style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 8px; flex-wrap: wrap; gap: 8px;"
    >
      <div
        style="display: flex; align-items: center; gap: 12px;"
      >
        <div
          style="font-size: 22px; font-weight: 800; color: rgb(17, 17, 17); letter-spacing: -0.5px;"
        >
          Pipeline
        </div>
        <div
          style="display: flex; gap: 3px;"
        >
          <button
            style="padding: 3px 10px; font-size: 12px; font-weight: 600; font-family: "Outfit", "DM Sans", -apple-system, BlinkMacSystemFont, sans-serif; border-radius: 6px; border: 1px solid rgb(74, 124, 89); background: rgb(237, 245, 240); color: rgb(74, 124, 89); cursor: pointer; transition: all 0.15s; display: flex; align-items: center; gap: 5px;"
          >
            All
            <span
              style="font-size: 10px; font-weight: 700; padding: 0px 5px; border-radius: 10px; background: rgb(74, 124, 89); color: rgb(255, 255, 255);"
            >
              4
            </span>
          </button>
          <button
            style="padding: 3px 10px; font-size: 12px; font-weight: 600; font-family: "Outfit", "DM Sans", -apple-system, BlinkMacSystemFont, sans-serif; border-radius: 6px; border: 1px solid rgb(226, 230, 226); background: rgb(255, 255, 255); color: rgb(107, 114, 128); cursor: pointer; transition: all 0.15s; display: flex; align-items: center; gap: 5px;"
          >
            🇿🇦
            <span
              style="font-size: 10px; font-weight: 700; padding: 0px 5px; border-radius: 10px; background: rgb(238, 241, 238); color: rgb(107, 114, 128);"
            >
              4
            </span>
          </button>
          <button
            style="padding: 3px 10px; font-size: 12px; font-weight: 600; font-family: "Outfit", "DM Sans", -apple-system, BlinkMacSystemFont, sans-serif; border-radius: 6px; border: 1px solid rgb(226, 230, 226); background: rgb(255, 255, 255); color: rgb(107, 114, 128); cursor: pointer; transition: all 0.15s; display: flex; align-items: center; gap: 5px;"
          >
            🌍
            <span
              style="font-size: 10px; font-weight: 700; padding: 0px 5px; border-radius: 10px; background: rgb(238, 241, 238); color: rgb(107, 114, 128);"
            >
              0
            </span>
          </button>
        </div>
      </div>
      <button
        style="padding: 6px 14px; border: medium; font-size: 12px; font-weight: 600; cursor: pointer; opacity: 1; font-family: "Outfit", "DM Sans", -apple-system, BlinkMacSystemFont, sans-serif; border-radius: 8px; transition: all 0.15s ease; letter-spacing: 0.1px; background: rgb(74, 124, 89); color: rgb(255, 255, 255); box-shadow: 0 1px 4px #4A7C5933;"
      >
        + Add
      </button>
    </div>
    <div
      style="display: flex; align-items: center; gap: 8px; margin-bottom: 10px; flex-wrap: wrap;"
    >
      <input
        placeholder="Search..."
        style="padding: 7px 12px; font-size: 13px; border: 1px solid rgb(226, 230, 226); border-radius: 8px; width: 160px; font-family: "Outfit", "DM Sans", -apple-system, BlinkMacSystemFont, sans-serif; outline: none; transition: border-color 0.15s;"
        value=""
      />
      <select
        style="padding: 7px 10px; font-size: 12px; border: 1px solid rgb(226, 230, 226); border-radius: 8px; font-family: "Outfit", "DM Sans", -apple-system, BlinkMacSystemFont, sans-serif; background: rgb(255, 255, 255); cursor: pointer;"
      >
        <option
          value="all"
        >
          🔽 Filters
        </option>
        <option
          value="Foundation"
        >
          Foundation
        </option>
        <option
          value="Corporate CSI"
        >
          Corporate CSI
        </option>
      </select>
      <select
        style="padding: 7px 10px; font-size: 12px; border: 1px solid rgb(226, 230, 226); border-radius: 8px; font-family: "Outfit", "DM Sans", -apple-system, BlinkMacSystemFont, sans-serif; background: rgb(255, 255, 255); cursor: pointer;"
      >
        <option
          value="list"
        >
          View: List
        </option>
        <option
          value="kanban"
        >
          View: Board
        </option>
        <option
          value="person"
        >
          View: Person
        </option>
      </select>
      <div
        style="flex: 1 1 0%;"
      />
      <span
        style="font-size: 12px; color: rgb(107, 114, 128);"
      >
        Sort by:
      </span>
      <select
        style="padding: 7px 10px; font-size: 12px; border: 1px solid rgb(226, 230, 226); border-radius: 8px; font-family: "Outfit", "DM Sans", -apple-system, BlinkMacSystemFont, sans-serif; background: rgb(255, 255, 255); font-weight: 600; cursor: pointer;"
      >
        <option
          value="default"
        >
          Deadline
        </option>
        <option
          value="ask"
        >
          Amount
        </option>
        <option
          value="priority"
        >
          Priority
        </option>
        <option
          value="fit"
        >
          Fit score
        </option>
      </select>
      <div
        data-tour="scout-button"
        style="display: flex; align-items: center; gap: 0px; border-radius: 8px; overflow: hidden; border: 1px solid rgba(74, 124, 89, 0.25);"
      >
        <button
          style="padding: 7px 14px; font-size: 12px; font-weight: 700; font-family: "Outfit", "DM Sans", -apple-system, BlinkMacSystemFont, sans-serif; background: rgb(74, 124, 89); color: rgb(255, 255, 255); border: medium; cursor: pointer;"
        >
          ☀ Scout
        </button>
        <select
          style="padding: 7px 6px; font-size: 11px; font-weight: 600; font-family: "Outfit", "DM Sans", -apple-system, BlinkMacSystemFont, sans-serif; border-width: medium medium medium 1px; border-style: none none none solid; border-color: currentcolor currentcolor currentcolor rgba(74, 124, 89, 0.19); border-image: none; background: rgb(237, 245, 240); color: rgb(74, 124, 89); cursor: pointer; outline: none;"
        >
          <option
            value="both"
          >
            🌐 All
          </option>
          <option
            value="sa"
          >
            🇿🇦 SA
          </option>
          <option
            value="global"
          >
            🌍 Global
          </option>
        </select>
      </div>
      <button
        style="padding: 6px 12px; border: 1px rgba(37, 99, 235, 0.19); font-size: 12px; font-weight: 600; cursor: pointer; opacity: 1; font-family: "Outfit", "DM Sans", -apple-system, BlinkMacSystemFont, sans-serif; border-radius: 8px; transition: all 0.15s ease; letter-spacing: 0.1px; background: transparent; color: rgb(37, 99, 235);"
      >
        🔗 URL
      </button>
      <button
        style="padding: 6px 12px; border: 1px rgba(193, 120, 23, 0.19); font-size: 12px; font-weight: 600; cursor: pointer; opacity: 1; font-family: "Outfit", "DM Sans", -apple-system, BlinkMacSystemFont, sans-serif; border-radius: 8px; transition: all 0.15s ease; letter-spacing: 0.1px; background: transparent; color: rgb(193, 120, 23); animation: none;"
      >
        ⚡ Score All
      </button>
      <button
        style="padding: 6px 12px; border: 1px solid rgb(226, 230, 226); font-size: 12px; font-weight: 600; cursor: pointer; opacity: 1; font-family: "Outfit", "DM Sans", -apple-system, BlinkMacSystemFont, sans-serif; border-radius: 8px; transition: all 0.15s ease; letter-spacing: 0.1px; background: transparent; color: rgb(107, 114, 128);"
      >
        CSV
      </button>
      <button
        style="padding: 6px 12px; border-width: 1px; border-style: solid; border-image: none; font-size: 12px; font-weight: 600; cursor: pointer; opacity: 1; font-family: "Outfit", "DM Sans", -apple-system, BlinkMacSystemFont, sans-serif; border-radius: 8px; transition: all 0.15s ease; letter-spacing: 0.1px; background: transparent; color: rgb(107, 114, 128);"
      >
        Select
      </button>
    </div>
    <div
      data-tour="pipeline-filters"
      style="display: flex; align-items: center; gap: 6px; margin-bottom: 10px; padding: 8px 14px; background: rgb(255, 255, 255); border-radius: 10px; border: 1px solid rgb(226, 230, 226); flex-wrap: wrap;"
    >
      <button
        style="padding: 5px 12px; border-radius: 100px; font-size: 11px; font-weight: 600; cursor: pointer; font-family: "Outfit", "DM Sans", -apple-system, BlinkMacSystemFont, sans-serif; transition: all 0.15s ease; border: medium; background: rgb(220, 252, 231); color: rgb(22, 163, 74);"
      >
        ● Open 
        3
      </button>
      <button
        style="padding: 5px 12px; border-radius: 100px; font-size: 11px; font-weight: 600; cursor: pointer; font-family: "Outfit", "DM Sans", -apple-system, BlinkMacSystemFont, sans-serif; transition: all 0.15s ease; border: medium; background: rgb(254, 245, 231); color: rgb(193, 120, 23);"
      >
        ● Due soon 
        0
      </button>
      <div
        style="width: 1px; height: 20px; background: rgb(226, 230, 226); margin: 0px 4px; flex-shrink: 0;"
      />
      <button
        style="padding: 4px 10px; border-radius: 100px; font-size: 11px; font-weight: 600; cursor: pointer; font-family: "Outfit", "DM Sans", -apple-system, BlinkMacSystemFont, sans-serif; transition: all 0.15s ease; border: 1px solid rgb(226, 230, 226); background: rgb(255, 255, 255); color: rgb(107, 114, 128);"
      >
        New this week
      </button>
      <button
        style="padding: 4px 10px; border-radius: 100px; font-size: 11px; font-weight: 600; cursor: pointer; font-family: "Outfit", "DM Sans", -apple-system, BlinkMacSystemFont, sans-serif; transition: all 0.15s ease; border: 1px solid rgb(226, 230, 226); background: rgb(255, 255, 255); color: rgb(107, 114, 128);"
      >
        Due this month
      </button>
      <button
        style="padding: 4px 10px; border-radius: 100px; font-size: 11px; font-weight: 600; cursor: pointer; font-family: "Outfit", "DM Sans", -apple-system, BlinkMacSystemFont, sans-serif; transition: all 0.15s ease; border: 1px solid rgb(226, 230, 226); background: rgb(255, 255, 255); color: rgb(107, 114, 128);"
      >
        No deadline
      </button>
      <button
        style="padding: 4px 10px; border-radius: 100px; font-size: 11px; font-weight: 600; cursor: pointer; font-family: "Outfit", "DM Sans", -apple-system, BlinkMacSystemFont, sans-serif; transition: all 0.15s ease; border: 1px solid rgb(226, 230, 226); background: rgb(255, 255, 255); color: rgb(107, 114, 128);"
      >
        No draft
      </button>
      <button
        style="padding: 4px 10px; border-radius: 100px; font-size: 11px; font-weight: 600; cursor: pointer; font-family: "Outfit", "DM Sans", -apple-system, BlinkMacSystemFont, sans-serif; transition: all 0.15s ease; border: 1px solid rgb(226, 230, 226); background: rgb(255, 255, 255); color: rgb(107, 114, 128);"
      >
        Unassigned
      </button>
      <div
        style="flex: 1 1 0%;"
      />
      <div
        style="display: flex; gap: 4px; align-items: center; flex-shrink: 0;"
      >
        <button
          style="width: 28px; height: 28px; border-radius: 50%; padding: 0px; border: 2px solid transparent; background: rgb(109, 40, 217); color: rgb(255, 255, 255); cursor: pointer; display: flex; align-items: center; justify-content: center; font-size: 10px; font-weight: 700; font-family: "Outfit", "DM Sans", -apple-system, BlinkMacSystemFont, sans-serif; transition: all 0.15s; opacity: 0.5; box-shadow: none;"
          title="Alison Jacobson"
        >
          AJ
        </button>
        <button
          style="width: 28px; height: 28px; border-radius: 50%; padding: 0px; border: 2px solid transparent; background: rgb(193, 120, 23); color: rgb(255, 255, 255); cursor: pointer; display: flex; align-items: center; justify-content: center; font-size: 10px; font-weight: 700; font-family: "Outfit", "DM Sans", -apple-system, BlinkMacSystemFont, sans-serif; transition: all 0.15s; opacity: 0.5; box-shadow: none;"
          title="David Kramer"
        >
          DK
        </button>
      </div>
    </div>
    <div
      data-testid="scout-stub"
    />
    <div
      style="background: rgb(255, 255, 255); border-radius: 12px; overflow: hidden; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.04); border: 1px solid rgb(226, 230, 226);"
    >
      <div
        style="display: flex; align-items: center; justify-content: space-between; padding: 8px 16px; border-bottom: 1px solid rgb(226, 230, 226); background: rgb(248, 250, 248);"
      >
        <div
          style="display: flex; align-items: center; gap: 4px; font-size: 12px; color: rgb(107, 114, 128);"
        >
          <span
            style="font-weight: 600;"
          >
            Sort by:
          </span>
          <select
            style="font-size: 12px; font-weight: 600; font-family: "Outfit", "DM Sans", -apple-system, BlinkMacSystemFont, sans-serif; border: medium; background: transparent; color: rgb(17, 17, 17); cursor: pointer; outline: none;"
          >
            <option
              value="default"
            >
              Deadline
            </option>
            <option
              value="ask"
            >
              Amount
            </option>
            <option
              value="priority"
            >
              Priority
            </option>
            <option
              value="fit"
            >
              Fit score
            </option>
          </select>
        </div>
      </div>
      <div
        data-tour="grant-card"
        style="display: flex; align-items: center; gap: 14px; padding: 12px 16px; border-bottom: 1px solid rgb(226, 230, 226); cursor: pointer; transition: background 0.15s; background: transparent;"
      >
        <span
          style="display: inline-flex; align-items: center; justify-content: center; width: 32px; height: 32px; font-size: 11.52px; font-weight: 700; color: rgb(109, 40, 217); background: rgb(243, 240, 255); border-radius: 9.6px; flex-shrink: 0; font-family: "JetBrains Mono", "SF Mono", "Fira Code", monospace;"
          title="Alison Jacobson"
        >
          AJ
        </span>
        <div
          style="flex: 1 1 0%; min-width: 0px;"
        >
          <div
            style="font-size: 14px; font-weight: 600; color: rgb(17, 17, 17); overflow: hidden; text-overflow: ellipsis; white-space: nowrap;"
          >
            Corporate Accelerator
          </div>
          <div
            style="font-size: 12px; color: rgb(107, 114, 128); margin-top: 1px; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;"
          >
            CCBA
          </div>
        </div>
        <div
          style="flex-shrink: 0; text-align: right; min-width: 80px;"
        >
          <span
            style="font-size: 13px; font-weight: 700; font-family: "JetBrains Mono", "SF Mono", "Fira Code", monospace; color: rgb(17, 17, 17); background: rgb(238, 241, 238); padding: 2px 8px; border-radius: 6px;"
          >
            R651K
          </span>
        </div>
        <div
          style="flex-shrink: 0; min-width: 110px; text-align: right;"
        >
          <span
            style="font-size: 11px; font-weight: 600; padding: 3px 10px; border-radius: 100px; color: rgb(107, 114, 128); background: rgb(238, 241, 238); white-space: nowrap;"
          >
            58d left
          </span>
        </div>
        <div
          style="flex-shrink: 0; min-width: 130px; display: flex; align-items: center; justify-content: flex-end; gap: 6px;"
        >
          <span
            style="font-size: 12px; color: rgb(107, 114, 128);"
          >
            Assigned to 
            <b
              style="color: rgb(28, 28, 28);"
            >
              Alison Jacobson
            </b>
          </span>
          <span
            style="display: inline-flex; align-items: center; justify-content: center; width: 24px; height: 24px; font-size: 8.64px; font-weight: 700; color: rgb(109, 40, 217); background: rgb(243, 240, 255); border-radius: 7.199999999999999px; flex-shrink: 0; font-family: "JetBrains Mono", "SF Mono", "Fira Code", monospace;"
            title="Alison Jacobson"
          >
            AJ
          </span>
        </div>
        <span
          style="font-size: 14px; color: rgb(107, 114, 128); flex-shrink: 0;"
        >
          ›
        </span>
      </div>
      <div
        style="display: flex; align-items: center; gap: 14px; padding: 12px 16px; border-bottom: 1px solid rgb(226, 230, 226); cursor: pointer; transition: background 0.15s; background: transparent;"
      >
        <span
          style="display: inline-flex; align-items: center; justify-content: center; width: 32px; height: 32px; font-size: 11.52px; font-weight: 700; color: rgb(109, 40, 217); background: rgb(243, 240, 255); border-radius: 9.6px; flex-shrink: 0; font-family: "JetBrains Mono", "SF Mono", "Fira Code", monospace;"
          title="Alison Jacobson"
        >
          AJ
        </span>
        <div
          style="flex: 1 1 0%; min-width: 0px;"
        >
          <div
            style="font-size: 14px; font-weight: 600; color: rgb(17, 17, 17); overflow: hidden; text-overflow: ellipsis; white-space: nowrap;"
          >
            Youth Skills 2026
          </div>
          <div
            style="font-size: 12px; color: rgb(107, 114, 128); margin-top: 1px; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;"
          >
            GIDF
          </div>
        </div>
        <div
          style="flex-shrink: 0; text-align: right; min-width: 80px;"
        >
          <span
            style="font-size: 13px; font-weight: 700; font-family: "JetBrains Mono", "SF Mono", "Fira Code", monospace; color: rgb(17, 17, 17); background: rgb(238, 241, 238); padding: 2px 8px; border-radius: 6px;"
          >
            R5.0M
          </span>
        </div>
        <div
          style="flex-shrink: 0; min-width: 110px; text-align: right;"
        >
          <span
            style="font-size: 11px; font-weight: 600; padding: 3px 10px; border-radius: 100px; color: rgb(107, 114, 128); background: rgb(238, 241, 238); white-space: nowrap;"
          >
            104d left
          </span>
        </div>
        <div
          style="flex-shrink: 0; min-width: 130px; display: flex; align-items: center; justify-content: flex-end; gap: 6px;"
        >
          <span
            style="font-size: 12px; color: rgb(107, 114, 128);"
          >
            Assigned to 
            <b
              style="color: rgb(28, 28, 28);"
            >
              Alison Jacobson
            </b>
          </span>
          <span
            style="display: inline-flex; align-items: center; justify-content: center; width: 24px; height: 24px; font-size: 8.64px; font-weight: 700; color: rgb(109, 40, 217); background: rgb(243, 240, 255); border-radius: 7.199999999999999px; flex-shrink: 0; font-family: "JetBrains Mono", "SF Mono", "Fira Code", monospace;"
            title="Alison Jacobson"
          >
            AJ
          </span>
        </div>
        <span
          style="font-size: 14px; color: rgb(107, 114, 128); flex-shrink: 0;"
        >
          ›
        </span>
      </div>
      <div
        style="display: flex; align-items: center; gap: 14px; padding: 12px 16px; border-bottom: 1px solid rgb(226, 230, 226); cursor: pointer; transition: background 0.15s; background: transparent;"
      >
        <span
          style="display: inline-flex; align-items: center; justify-content: center; width: 32px; height: 32px; font-size: 11.52px; font-weight: 700; color: rgb(193, 120, 23); background: rgb(254, 245, 231); border-radius: 9.6px; flex-shrink: 0; font-family: "JetBrains Mono", "SF Mono", "Fira Code", monospace;"
          title="David Kramer"
        >
          DK
        </span>
        <div
          style="flex: 1 1 0%; min-width: 0px;"
        >
          <div
            style="font-size: 14px; font-weight: 600; color: rgb(17, 17, 17); overflow: hidden; text-overflow: ellipsis; white-space: nowrap;"
          >
            Board Initiative
          </div>
          <div
            style="font-size: 12px; color: rgb(107, 114, 128); margin-top: 1px; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;"
          >
            RMB
          </div>
        </div>
        <div
          style="flex-shrink: 0; text-align: right; min-width: 80px;"
        >
          <span
            style="font-size: 13px; font-weight: 700; font-family: "JetBrains Mono", "SF Mono", "Fira Code", monospace; color: rgb(17, 17, 17); background: rgb(238, 241, 238); padding: 2px 8px; border-radius: 6px;"
          >
            R516K
          </span>
        </div>
        <div
          style="flex-shrink: 0; min-width: 110px; text-align: right;"
        >
          <span
            style="font-size: 11px; font-weight: 600; padding: 3px 10px; border-radius: 100px; color: rgb(107, 114, 128); background: rgb(238, 241, 238); white-space: nowrap;"
          >
            105d left
          </span>
        </div>
        <div
          style="flex-shrink: 0; min-width: 130px; display: flex; align-items: center; justify-content: flex-end; gap: 6px;"
        >
          <span
            style="font-size: 12px; color: rgb(107, 114, 128);"
          >
            Assigned to 
            <b
              style="color: rgb(28, 28, 28);"
            >
              David Kramer
            </b>
          </span>
          <span
            style="display: inline-flex; align-items: center; justify-content: center; width: 24px; height: 24px; font-size: 8.64px; font-weight: 700; color: rgb(193, 120, 23); background: rgb(254, 245, 231); border-radius: 7.199999999999999px; flex-shrink: 0; font-family: "JetBrains Mono", "SF Mono", "Fira Code", monospace;"
            title="David Kramer"
          >
            DK
          </span>
        </div>
        <span
          style="font-size: 14px; color: rgb(107, 114, 128); flex-shrink: 0;"
        >
          ›
        </span>
      </div>
      <div
        style="display: flex; align-items: center; gap: 14px; padding: 12px 16px; border-bottom: 1px solid rgb(226, 230, 226); cursor: pointer; transition: background 0.15s; background: transparent;"
      >
        <span
          style="display: inline-flex; align-items: center; justify-content: center; width: 32px; height: 32px; font-size: 11.52px; font-weight: 700; color: rgb(109, 40, 217); background: rgb(243, 240, 255); border-radius: 9.6px; flex-shrink: 0; font-family: "JetBrains Mono", "SF Mono", "Fira Code", monospace;"
          title="Alison Jacobson"
        >
          AJ
        </span>
        <div
          style="flex: 1 1 0%; min-width: 0px;"
        >
          <div
            style="font-size: 14px; font-weight: 600; color: rgb(17, 17, 17); overflow: hidden; text-overflow: ellipsis; white-space: nowrap;"
          >
            FET Programme
          </div>
          <div
            style="font-size: 12px; color: rgb(107, 114, 128); margin-top: 1px; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;"
          >
            DGMT
          </div>
        </div>
        <div
          style="flex-shrink: 0; text-align: right; min-width: 80px;"
        >
          <span
            style="font-size: 13px; font-weight: 700; font-family: "JetBrains Mono", "SF Mono", "Fira Code", monospace; color: rgb(17, 17, 17); background: rgb(238, 241, 238); padding: 2px 8px; border-radius: 6px;"
          >
            R1.1M
          </span>
        </div>
        <div
          style="flex-shrink: 0; min-width: 110px; text-align: right;"
        >
          <span
            style="font-size: 11px; font-weight: 600; padding: 3px 10px; border-radius: 100px; color: rgb(16, 185, 129); background: rgb(236, 253, 245); white-space: nowrap;"
          >
            Won
          </span>
        </div>
        <div
          style="flex-shrink: 0; min-width: 130px; display: flex; align-items: center; justify-content: flex-end; gap: 6px;"
        >
          <span
            style="font-size: 12px; color: rgb(107, 114, 128);"
          >
            Assigned to 
            <b
              style="color: rgb(28, 28, 28);"
            >
              Alison Jacobson
            </b>
          </span>
          <span
            style="display: inline-flex; align-items: center; justify-content: center; width: 24px; height: 24px; font-size: 8.64px; font-weight: 700; color: rgb(109, 40, 217); background: rgb(243, 240, 255); border-radius: 7.199999999999999px; flex-shrink: 0; font-family: "JetBrains Mono", "SF Mono", "Fira Code", monospace;"
            title="Alison Jacobson"
          >
            AJ
          </span>
        </div>
        <span
          style="font-size: 14px; color: rgb(107, 114, 128); flex-shrink: 0;"
        >
          ›
        </span>
      </div>
    </div>
  </div>
</div>
`;
